# graph-portfolio

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/actions/test/: action.yml
.github/workflows/: docker-build-test.yml  e2e-test.yml  integration-test.yml  unit-integration-test.yml  unit-test.yml
deploy/: requirements.txt
deploy/ecr/: main.tf  push_image.sh
deploy/lambda/: resource-iam.tf  resource-lambda-endpoint.tf  resource-lambda.tf  variables.tf
src/graph_portfolio/: api.py  config.py  exceptions.py  graph.py  index_component_reader.py  schema.py  stooq_reader.py  utils.py
src/quantum_portfolio/: api.py  graph.py  schema.py  stooq_reader.py  utils.py
src/quantum_portfolio/model/: dtos.py  scraper.py
src/quantum_portfolio/model/scraper/: scraper.py
src/quantum_portfolio/model/scraper/readers/: abstract.py  mock_reader.py
src/quantum_portfolio/readers/: reader.py  stooq_reader.py
tests/graph_porfolio/: conftest.py  test_config.py  test_e2e.py  test_graph.py  test_index_component_reader.py  test_schema.py  test_stooq_reader.py  test_utils.py
tests/model/: test_scraper.py
