[tool.poetry]
name = "quantum-portfolio"
version = "0.1.0"
description = ""
authors = ["AleksanderWWW <alwojnarowicz@gmail.com>"]
readme = "README.md"
packages = [{include = "quantum_portfolio", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.112.0"}
dwave-networkx = "^0.8.15"
dwave-system = "^1.25.0"
pytickersymbols = "^1.15.0"
pandas = "^2.2.2"
pandas-datareader = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
