[project]
name = "quantum-portfolio-faas"

version = "0.1.0"

description = "Add your description here"

readme = "README.md"

requires-python = ">=3.10"


dependencies = [
    "aiohttp>=3.11.11",
    "beautifulsoup4>=4.13.3",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
    "isort>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.9.4",
]

[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["quantum_portfolio"]
