[project]
name = "graph-portfolio"

version = "0.1.0"

description = "Add your description here"

readme = "README.md"

requires-python = ">=3.10"


dependencies = [
    "aiohttp>=3.11.11",
    "beautifulsoup4>=4.13.3",
    "litserve>=0.2.6",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.4",
    "pre-commit>=4.1.0",
]

[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["graph_portfolio"]
